--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/router.js"></script>
         <script src="scripts/helpers/notificationsHelper.js"></script>
+        <script src="scripts/directives/rightClickDirective.js"></script>
         <script src="scripts/modules/game.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <!-- endbuild -->
